tests/fixtures/invalid/invalid-regex-pattern.bprint
{
  "schemaVersion": 1.0,
  "entityName": "Invalid",
  "description": "Invalid: malformed regex pattern",
  "primaryKey": { "partitionKey": "id" },
  "fields": [
    {
      "name": "id",
      "type": "string",
      "required": true
    },
    {
      "name": "code",
      "type": "string",
      "required": true,
      "constraints": {
        "pattern": "[invalid(regex"
      }
    }
  ]
}
